Bouton d'élection + affichage de l'historique
