# comtea-back/src/main/java/fr/comtea/controller/RoleTournantController.java
@@ -2,6 +2,7 @@ package fr.comtea.controller;
 
 import java.util.List;
 
+import fr.comtea.service.collaborateur.Collaborateur;
 import fr.comtea.service.roletournant.HistoriqueElection;
 import fr.comtea.service.roletournant.RoleTournantService;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -23,6 +24,11 @@ public class RoleTournantController {
     @GetMapping(path = "/{role}/historique", produces = MediaType.APPLICATION_JSON_VALUE)
     public List<HistoriqueElection> historique(@PathVariable("role") final String role) {
         return roleTournantService.recupererHistoriqueElectionPourRole(role);
+    }
+
+    @GetMapping(path = "/{role}/election", produces = MediaType.APPLICATION_JSON_VALUE)
+    public Collaborateur election(@PathVariable("role") final String role) {
+        return roleTournantService.lancerElectionPourRole(role);
     }
 }
 
